# cli

./: .dmypy.json  .env  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  Argcfile.sh  CLAUDE.local.md  CLAUDE.md  CLAUDE2.md  COMMANDS.md  CONDUCTOR.md  CONFIG.md  CONTRIBUTING.md  DATA_MODEL.md  DEVELOPMENT.md  FUNCTIONAL_MAP.md  HANDOVER.md  JOURNAL.md  Makefile  ONBOARDING.md  PLAN.md  README.md  SCRIPT.md  SESSION_SUMMARY.md  SKOGCLI.md  TEAM_STANDARDS.md  TEST.md  TODO.md  UIUX.md  abc.md  aider.sh  b  bandit-report.json  basic-memory-implementation.md  codebase_analysis_report.md  commit_message.txt  context.md  (+16 more)
.basic-memory/: memory.db  watch-status.json
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  team-review.yml
.llm/: CLAUDE.local.md  CLAUDE2.local.md  long-term-goals.md  session-context.md  test-plan.md  todo.md
.serena/: project.yml
.serena/memories/: codebase_structure.md  coding_style_conventions.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  task_completion_workflow.md
.skogai/: .envrc  .gitignore  CLAUDE.md  readme.md  run  update
.skogai/.claude/: CLAUDE.md  settings.json
.skogai/.logs/: 2025-07-14-1-summary.md  2025-07-14-1.txt  2025-07-14-3.txt  2025-07-14-release-0.0.0.txt  2025-07-14-release-diff.md  SkogAI-Values-Alignment.md  todo.md
.skogai/.suggestions/: claudes-helpfulness.md
.skogai/dev/: .env
.skogai/docs/: CLAUDE-CERTAINTY.md  CLAUDE-GOALS.md  CLAUDE-PLACEHOLDER.md  CLAUDE-ROLES-AND-RESPONSIBILITY.md  CLAUDE-SYSTEMPROMPT.md  CLAUDE.md  definitions.md  handover.md  plan.md  skogix.md  starting-context.md  todo.md  user.md
.skogai/git/: a  b  c
.skogai/hooks/: on-tool-use.sh
.skogai/scripts/: apply-prompt-replacements.sh  context-claude-md.sh  context-definitions.sh  context-end.sh  context-git.sh  context-journal.sh  context-readme.sh  context-start.sh  context-user.sh  context-workspace.sh  export-chat.sh  git-info  process_test_cases.sh  show-logs  skogparse-def  tag-start  update
.specstory/history/: 2025-07-28_14-08-06Z-hello-claude.md  2025-07-28_14-18-01Z-hello-claude.md  2025-07-28_14-19-23Z-you-maybe-didnt-understand.md  2025-07-28_14-19-39Z-you-maybe-didnt-understand.md  2025-07-28_14-19-54Z-i-m-looking-to.md  2025-07-28_14-20-13Z-hello-claude.md  2025-07-28_14-20-39Z-continue.md  2025-07-28_14-20-59Z-hello-claude.md  2025-07-28_14-21-14Z-hello-claude.md  2025-07-28_14-22-16Z-hello-claude.md  2025-07-28_14-25-59Z-hello-claude.md  2025-07-28_14-26-35Z-i-d-like-you.md  2025-07-28_14-26-59Z-please-continue.md  2025-07-28_14-27-20Z-continue.md  2025-07-28_14-27-29Z-hello-claude.md  2025-07-28_14-28-25Z-hello-claude.md  2025-07-28_14-31-39Z-hello-claude.md  2025-07-28_18-55-29Z-bash-input-env-bash.md  2025-07-29_09-02-08Z-bash-input-make-test.md  2025-07-30_03-59-40Z-hello-claude.md  2025-07-30_08-12-44Z-hello-claude-i-m.md  2025-07-30_08-13-38Z-hello-claude-please-lookup.md  2025-07-31_15-18-58Z-bash-input-cp-home.md
Architecture/: System Architecture.canvas
SkogAI Lessons/: Learning From Failures in SkogPrompt Project.md
SkogAI/Architecture/: SkogCLI Standards MCP Design.md  SkogMCP Multi-Agent Architecture Overview.md
SkogAI/Features/: AI Tag System for File-Based AI Interactions.md
SkogMCP/: MCP Development Tools.md
SkogPrompt/: SkogPrompt Dynamic Prompt Requirements.md  SkogPrompt Minimal Agent Command Syntax.md
agents/: Goose Role.md
approaches/: Collaboration Principles with SkogAI.md
architecture/: SkogPrompt Architecture Overview.md  SkogPrompt Dynamic Agent Communication Architecture.md  SkogPrompt Integration Architecture.md  SkogPrompt Integration with Template-Based Prompt Generation.md
claude/: last-summary-1.md
configuration/: Recommended Additions to Global CLAUDE.md.md
design/: Format Conversion Details.md  Format Details: Conversion between AI Platforms.md  Jinja Template Design for Specialized Agent Commands.md  SkogPrompt Format Conversion - Complete Architecture.md  SkogPrompt Format Conversion Architecture.md  SkogPrompt Templating System Design.md
docs/: SkogCLI Standards and Conventions.md  typer.skogcli.commands.txt
documentation/: SkogPrompt Tools Guide.md
planning/: SkogPrompt Development Priorities.md
proposals/: AI Persona Consistency Framework.md  Cross-Agent Task Delegation Framework.md  SkogAPI Framework Selection.md  Standardized Agent Capability Markers.md
scripts/: amy.sh  claude.sh  default.sh  dot.sh  goose.sh  skogai.sh  skogix.sh  test-agent.sh  test.sh
skogai/: install.sh
skogcli/: Basic Memory Project Management.md  Optimized Skogai-Memory Implementation Guide.md  SkogCLI Development Guidelines.md  SkogCLI Memory Module Development Workflow.md  SkogCLI Memory Module Implementation.md  SkogCLI Memory Module Test Strategy.md  SkogCLI Project Testing Notes.md  SkogCLI Test Fixes Summary.md  Skogai-Memory Extension Guide.md  Understanding URIs in Skogai Memory - A Practical Guide.md  all_md_content.txt  skogcli Memory Module Implementation Plan.md
system-knowledge/: SkogCLI and System Integration Lessons.md
tests/: README.md  conftest.py  run_integration_tests.sh  run_tests.sh  test_cli_help.py  test_config.py  test_config_env_advanced.py  test_config_env_export.py  test_config_no_dotconfig.py  test_decorators.py  test_examples.py  test_makefile.py  test_memory.py  test_memory_cli.py  test_memory_functional.py  test_memory_integration.py  test_misc.py  test_multi_namespace_export.py  test_settings.py  test_version.py
tmp/: evaluation.md  skogparse
(+112 files in other folders)
