[project]
name = "skogcli"
version = "0.1.0"
description = "CLI tool for the SkogAI-project"
readme = "README.md"
authors = [{ name = "Emil Skogsund", email = "emil@skogsund.se" }]
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.8",
  "flake8>=7.2.0",
  "isort>=6.0.1",
  "pyright>=1.1.400",
  "pytest>=8.3.5",
  "requests>=2.32.3",
  "typer==0.7.0",
]

[project.scripts]
s = "skogcli:main"
skog = "skogcli:main"
skogcli = "skogcli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
