[project]
name = "skogcli"
version = "0.0.3"
description = "CLI tool for the SkogAI-project"
readme = "README.md"
authors = [{ name = "Emil Skogsund", email = "emil@skogsund.se" }]
requires-python = ">=3.13"
dependencies = [
  "black>=25.1.0",
  "click<8.2.0",
  "litellm>=1.72.6",
  "pip>=25.1.1",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "smolagents[litellm]>=1.18.0",
  "tdd-guard-pytest>=0.1.2",
  "tiktoken>=0.9.0",
  "typer>=0.15.2",
  "types-requests>=2.32.4.20250611",
]

[project.scripts]
skogcli = "skogcli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "coverage[toml]>=7.9.2",
  "mypy>=1.17.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.4",
]

[tool.pytest.ini_options]
tdd_guard_project_root = "/home/skogix/.local/src/cli"
